--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap&'; );
+@-moz-documentimport url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 
 :root {
@@ -61,32 +61,47 @@ body {
     display: block;
 }
 
-.botao.ativo{
+.botao.ativo {
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
 }
-abas-textos{
+
+abas-textos {
     background-color: var(--texto-fundo);
     padding: 40px;
     border-radius: 0 0 40px 40px;
 }
 
-.aba-conteudo{
+.aba-conteudo.ativo {
     display: block;
 }
 
-.aba-conteudo{
+.aba-conteudo {
     display: none;
 }
-.aba-conteudo-titulo-principal{
+
+.aba-conteudo-titulo-principal {
     font-size: 28px;
     text-align: center;
 }
-.aba-conteudo-titulo-secundario{
+
+.aba-conteudo-titulo-secundario {
     text-align: center;
     color: var(--verde);
     text-transform: uppercase;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media screen and (min-width: 768px) {
     .botoes {
