--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@-moz-documentimport url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
     --cor-de-fundo: #1E1E1E;
@@ -37,8 +36,9 @@ body {
     color: var(--verde);
 }
 
+
 .botao {
-    font-family: "Chakra Petch", sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -66,7 +66,7 @@ body {
     border-bottom: 4px solid var(--verde);
 }
 
-abas-textos {
+.abas-textos {
     background-color: var(--texto-fundo);
     padding: 40px;
     border-radius: 0 0 40px 40px;
@@ -91,17 +91,30 @@ abas-textos {
     text-transform: uppercase;
 }
 
+.contador {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
+.contador-digito {
+    padding: 0 16px;
+    text-align: center;
+    min-width: 100px;
+}
 
+.contador-digito-numero {
+    font-size: 80px;
+    margin: 0;
 
+}
 
+.contador-digito-texto {
+    color: var(--verde);
+    font-size: 20px;
+    margin: 0;
 
-
-
-
-
-
-
+}
 
 @media screen and (min-width: 768px) {
     .botoes {
