--- a/style.css
+++ b/style.css
@@ -96,6 +96,21 @@
         text-align: center;
     }
 
+    .contador-digito{
+        padding: 0 16px;
+        text-align: center;
+        min-width: 100px;
+    }
+    .contador-digito-numero{
+        font-size: 80px;
+        margin: 0;
+    }
+
+    .contador-digito-texto{
+        color: var(--verde);
+        font-size: 20px;
+        margin: 0;
+    }
 
 
 
