--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 
 
     :root {
-        --cor-de-fundo: #1E1E1E;
-        --verde: #e357ff;
-        --branco: #FFFFFF;
-        --botao-ativo: #3A375E;
-        --botao-inativo: rgba(58, 55, 94, 0.5);
-        --texto-fundo: rgba(58, 55, 94, 0.3);
+        --cor-de-fundo: #000000e5;
+        --verde: #df67bb;
+        --branco: #ffffff3d;
+        --botao-ativo: #d68ed3;
+        --botao-inativo: rgb(158, 75, 137);
+        --texto-fundo: rgb(192, 83, 192);
     }
 
     body {
@@ -92,8 +92,9 @@
     }
 
     .contador{
-        font-size: 20px;
-        text-align: center;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
     }
 
     .contador-digito{
@@ -101,6 +102,7 @@
         text-align: center;
         min-width: 100px;
     }
+
     .contador-digito-numero{
         font-size: 80px;
         margin: 0;
@@ -112,17 +114,7 @@
         margin: 0;
     }
 
-
-
-
-
-
-
-
-
-
-
-    @media screen and (min-width: 768px){
+   @media screen and (min-width: 768px){
         .botoes{
             display: flex;
         }
